# project-rocky

./: .gitignore  ATTRIBUTION.md  README.md
docs/plans/: 2026-04-17-rocky-voice-agent-design.md
rocky-agent/: agent.py  config.py  config.yaml  idle.py  main.py  requirements.txt  rocky_client.py
rocky-cli/: pyproject.toml
rocky-cli/rocky_cli/: client.py  main.py
