[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rocky-cli"
version = "0.1.0"
description = "CLI to control Rocky the quadruped robot over WiFi"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
rocky-cli = "rocky_cli.main:cli"
